--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <fieldset>
       <legend>$ Size(s)</legend>
       <input type="radio" id="small" name="small" value="small">
-      <label for="small">Small $5</label>
+      <label for="small" checked >Small $5</label>
       <input type="radio" id="medium" name="medium" value="medium">
       <label for="medium">Medium $10</label>
       <input type="radio" id="large" name="large" value="large">
