--- a/index.html
+++ b/index.html
@@ -13,33 +13,33 @@
   <form>
 
     
-    <fieldset>
-      <legend>$ Size(s)</legend>
+    <section>
+      <h3>$ Size(s)</h3>
       <input type="radio" id="small" name="size" value="small">
       <label for="small" checked >Small $5</label>
       <input type="radio" id="medium" name="size"value="medium">
       <label for="medium">Medium $10</label>
       <input type="radio" id="large" name="size" value="large">
       <label for="large">Large $15</label>
-    </fieldset>
+    </section>
 
-    <fieldset>
-      <legend>$ Topping(s)</legend>
+    <section>
+      <h3>$ Topping(s)</h3>
       <input type="checkbox" id="pepperoni" name="toppings">
       <label for="pepperoni">Pepperoni</label>
       <input type="checkbox" id="mushroom" name="toppings">
       <label for="mushroom">Mushroom $10</label>
       <input type="checkbox" id="anchovies" name="toppings">
       <label for="anchovies">Anchovies</label>
-    </fieldset>
+    </section>
 
-    <fieldset>
-      <legend>Welcome</legend>
+    <section>
+      <h3>Welcome</h3>
       <div>
         <label for="first-name">Order Name:</label>
         <input type="text" id="customer-name" name="customer-name" required minlength="2" maxlength="30" size="10" value="">
       </div>
-    </fieldset>
+    </section>
     
     <div>
       <button type="submit">Order</button>
