It will update the css to reflect new id's on all fieldsets for input distinction.

--- a/index.html
+++ b/index.html
@@ -10,37 +10,37 @@
 </head>
 <body>
   <h2>Bella's Pizza</h2>
-  <form>
 
     
-    <section>
-      <h3>$ Size(s)</h3>
+  <form>
+
+    <fieldset id="order-name">
+      <legend>Welcome</legend>
+      <div>
+        <label for="customer-name">Order Name:</label>
+        <input type="text" id="customer-name" name="customer-name" required minlength="2" maxlength="30" size="10" value="">
+      </div>
+    </fieldset>
+
+    <fieldset id="order-size">
+      <legend>$ Size(s)</legend>
       <input type="radio" id="small" name="size" value="small">
       <label for="small" checked >Small $5</label>
       <input type="radio" id="medium" name="size"value="medium">
       <label for="medium">Medium $10</label>
       <input type="radio" id="large" name="size" value="large">
       <label for="large">Large $15</label>
-    </section>
+    </fieldset>
 
-    <section>
-      <h3>$ Topping(s)</h3>
+    <fieldset id="order-toppings">
+      <legend>$ Topping(s)</legend>
       <input type="checkbox" id="pepperoni" name="toppings">
       <label for="pepperoni">Pepperoni</label>
       <input type="checkbox" id="mushroom" name="toppings">
       <label for="mushroom">Mushroom $10</label>
       <input type="checkbox" id="anchovies" name="toppings">
       <label for="anchovies">Anchovies</label>
-    </section>
-
-    <section>
-      <h3>Welcome</h3>
-      <div>
-        <label for="first-name">Order Name:</label>
-        <input type="text" id="customer-name" name="customer-name" required minlength="2" maxlength="30" size="10" value="">
-      </div>
-    </section>
-    
+    </fieldset>
     <div>
       <button type="submit">Order</button>
     </div>
