It will print price to dom.

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     </div>
   </form>
   <!-- <pre id="log"></pre> -->
-  <div class="output">
-    <p class="size"></p>
-    <p class="toppings"></p>
-    <p class="price"></p>
+  <div id="output">
+    <p id="size"></p>
+    <p id="toppings"></p>
+    <p id="price"></p>
   </div>
 </body>
 </html>
